Changed design of search layouts

--- a/app/src/main/res/layout/fragment_all_recipes.xml
+++ b/app/src/main/res/layout/fragment_all_recipes.xml
@@ -10,20 +10,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/etSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:backgroundTint="@color/colorPrimaryText"
             android:hint="@string/search"
-            android:textColor="@color/colorPrimaryText"
-            android:textColorHint="@color/colorSecondaryText"
+            android:textColorHint="@color/appBackgroundColor"
+            app:boxBackgroundMode="outline"
+            app:boxStrokeColor="@color/appBackgroundColor"
+            app:boxStrokeErrorColor="@color/errorColor"
+            app:endIconMode="clear_text"
+            app:endIconTint="@color/colorPrimary"
+            app:hintTextColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:startIconDrawable="@drawable/ic_search"
+            app:startIconTint="@color/colorPrimary">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etSearchInside"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="text"
+                android:paddingTop="18dp"
+                android:paddingBottom="18dp"
+                android:textColor="@color/appBackgroundColor" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvAllRecipes"
