--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -71,6 +71,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
                     android:textColor="@color/appBackgroundColor" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -99,6 +101,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
                     android:textColor="@color/appBackgroundColor" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -127,6 +131,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
                     android:textColor="@color/appBackgroundColor" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -155,6 +161,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
                     android:textColor="@color/appBackgroundColor" />
 
             </com.google.android.material.textfield.TextInputLayout>
