--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -71,6 +71,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
                     android:textColor="@color/appBackgroundColor" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -97,6 +99,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
                     android:textColor="@color/appBackgroundColor" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -123,6 +127,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
                     android:textColor="@color/appBackgroundColor" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -149,6 +155,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
                     android:textColor="@color/appBackgroundColor" />
 
             </com.google.android.material.textfield.TextInputLayout>
