--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -72,6 +72,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="text"
+                        android:paddingTop="18dp"
+                        android:paddingBottom="18dp"
                         android:textColor="@color/appBackgroundColor" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -99,6 +101,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
+                        android:paddingTop="18dp"
+                        android:paddingBottom="18dp"
                         android:textColor="@color/appBackgroundColor" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -126,6 +130,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textMultiLine"
+                        android:paddingTop="18dp"
+                        android:paddingBottom="18dp"
                         android:textColor="@color/appBackgroundColor" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -153,6 +159,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textMultiLine"
+                        android:paddingTop="18dp"
+                        android:paddingBottom="18dp"
                         android:textColor="@color/appBackgroundColor" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -166,7 +174,6 @@
                     android:src="@drawable/ic_add_photo"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/etTime" />
-
 
                 <TextView
                     android:id="@+id/tvCancel"
