--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -84,6 +84,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
                     android:textColor="@color/appBackgroundColor"
                     android:textSize="20sp" />
 
