--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -69,6 +69,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
                     android:textColor="@color/appBackgroundColor" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -95,6 +97,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
+                    android:paddingTop="18dp"
+                    android:paddingBottom="18dp"
                     android:textColor="@color/appBackgroundColor" />
 
             </com.google.android.material.textfield.TextInputLayout>
