--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -80,6 +80,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
+                android:paddingTop="18dp"
+                android:paddingBottom="18dp"
                 android:textColor="@color/appBackgroundColor" />
 
         </com.google.android.material.textfield.TextInputLayout>
