Added new font and padding to RecyclerViews:

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="colorNotSelected">#9AB5B3</color>
     <color name="errorColor">#D50000</color>
     <color name="onlineColor">#43A047</color>
-    <color name="colorPrimaryText">@android:color/black</color>
+    <color name="colorPrimaryText">#494949</color>
     <color name="colorPrimaryText2">@android:color/white</color>
     <color name="colorSecondaryText">#606060</color>
     <color name="colorBackgroundRow">#FFFFFF</color>
