--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
         <item name="material_dialog_positive_button_text_color">@android:color/white</item>
         <item name="material_dialog_negative_button_text_color">@color/colorPrimary</item>
 
-        <!--> toolbar color -->
+        <!-- toolbar color -->
         <item name="colorSurface">@color/appBackgroundColor</item>
         <item name="colorOnPrimary">@color/colorPrimary</item>
         <item name="colorOnSecondary">@android:color/white</item>
@@ -26,6 +26,9 @@
         <item name="colorOnError">@android:color/black</item>
         <item name="colorOnSurface">@android:color/white</item>
         <item name="scrimBackground">@color/mtrl_scrim_color</item>
+
+        <!-- Text Font -->
+        <item name="android:fontFamily">@font/berlin_sans_fb_regular</item>
 
         <item name="textAppearanceHeadline1">@style/TextAppearance.MaterialComponents.Headline1
         </item>
