--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,14 @@
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBarLayout"
                 android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
+                android:layout_height="wrap_content"
                 android:gravity="top">
 
                 <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="?android:attr/actionBarSize"
+                    app:menu="@menu/activity_main_menu">
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/tvToolbarTitle"
@@ -36,8 +37,7 @@
                         android:text="@string/app_name"
                         android:textColor="@android:color/white"
                         android:textSize="30sp"
-                        android:textStyle="bold"
-                        app:layout_constraintHorizontal_bias="0.5" />
+                        android:textStyle="bold" />
 
                 </com.google.android.material.appbar.MaterialToolbar>
             </com.google.android.material.appbar.AppBarLayout>
