--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
                         android:id="@+id/ivFavorites"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_favorite"
+                        android:src="@drawable/ic_menu_favorites"
                         android:layout_marginEnd="10dp"/>
 
                     <com.google.android.material.textview.MaterialTextView
