--- a/app/src/main/res/layout-night/activity_recipe.xml
+++ b/app/src/main/res/layout-night/activity_recipe.xml
@@ -20,6 +20,7 @@
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleGravity="top"
             app:expandedTitleTextAppearance="@style/ToolbarTitleTextAppearance"
+            app:collapsedTitleTextAppearance="@style/CollapsedToolbarTitleTextAppearance"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
             app:statusBarScrim="@color/colorPrimary"
             app:title="@string/app_name">
