--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -56,6 +56,14 @@
 
     <style name="ToolbarTitleTextAppearance" parent="TextAppearance.Design.CollapsingToolbar.Expanded">
         <item name="android:textColor">@android:color/transparent</item>
+        <item name="fontFamily">@font/berlin_sans_fb_regular</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="CollapsedToolbarTitleTextAppearance" parent="TextAppearance.Design.CollapsingToolbar.Expanded">
+        <item name="android:textColor">@color/colorPrimaryText2</item>
+        <item name="fontFamily">@font/berlin_sans_fb_regular</item>
+        <item name="android:gravity">center</item>
     </style>
 
 </resources>
