Changed design of row

--- a/app/src/main/res/layout/recipe_row.xml
+++ b/app/src/main/res/layout/recipe_row.xml
@@ -3,14 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_height="340dp"
     android:elevation="10dp">
 
     <ImageView
         android:id="@+id/ivBackground"
-        android:layout_width="0dp"
-        android:layout_height="320dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:transitionName="photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,8 +20,8 @@
 
     <View
         android:id="@+id/overlay_image"
-        android:layout_width="0dp"
-        android:layout_height="320dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#4D000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
