--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -4,6 +4,16 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
 
+        <item name="android:windowContentTransitions">true</item>
+
+        <!-- specify shared element transitions -->
+        <item name="android:windowSharedElementEnterTransition">
+            @transition/change_image_transition
+        </item>
+        <item name="android:windowSharedElementExitTransition">
+            @transition/change_image_transition
+        </item>
+
         <!-- Original AppCompat attributes. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorSecondary">@color/colorPrimary</item>
@@ -64,6 +74,10 @@
         <item name="android:textColor">@color/colorPrimaryText2</item>
         <item name="fontFamily">@font/berlin_sans_fb_regular</item>
         <item name="android:gravity">center</item>
+    </style>
+
+    <style name="AppTheme.Splash" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
 </resources>
