--- a/app/src/main/res/layout-night/recipe_row.xml
+++ b/app/src/main/res/layout-night/recipe_row.xml
@@ -22,8 +22,8 @@
         android:id="@+id/tvName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/text_background"
         android:padding="5dp"
@@ -39,26 +39,26 @@
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="30dp"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/text_background"
         android:text="Time"
+        android:textColor="?attr/colorControlNormal"
         android:textSize="20sp"
         android:textStyle="italic"
-        android:textColor="?attr/colorControlNormal"
         app:drawableStartCompat="@drawable/ic_time"
         app:layout_constraintBottom_toTopOf="@+id/tvName"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/text_background" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvNumOfFavorites"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="30dp"
         android:text="5"
-        android:textSize="25sp"
         android:textColor="?attr/colorControlNormal"
+        android:textSize="25sp"
         app:drawableEndCompat="@drawable/ic_row_favorite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
